--- a/BookStore/Views/Products/Single.cshtml
+++ b/BookStore/Views/Products/Single.cshtml
@@ -347,6 +347,7 @@
 
     <script>
         $(document).ready(function () {
+            // cheat để hình (sản phẩm) giữ được ratio, và to đẹp
             var infoHeight = $("#panel_info").height();
             $("#panel_img").height(infoHeight);
         });
