--- a/BookStore/Views/Staff/ListPublisher.cshtml
+++ b/BookStore/Views/Staff/ListPublisher.cshtml
@@ -108,7 +108,7 @@
         $("#list").html(rows);
     }
 
-    // ham delete order
+    // ham delete publisher
     function deletePublisher(id) {
         var confirmDelete = confirm("Bạn có chắc là muốn xoá");
         if (confirmDelete) {
